--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.2.2",
     "expo": "~45.0.0",
+    "expo-font": "~10.1.0",
+    "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
     "phosphor-react-native": "^1.1.1",
     "react": "17.0.2",
