--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@expo-google-fonts/inter": "^0.2.2",
     "@gorhom/bottom-sheet": "^4",
     "expo": "~45.0.0",
+    "expo-file-system": "~14.0.0",
     "expo-font": "~10.1.0",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
@@ -23,6 +24,7 @@
     "react-native-gesture-handler": "~2.2.1",
     "react-native-reanimated": "~2.8.0",
     "react-native-svg": "^12.3.0",
+    "react-native-view-shot": "3.1.2",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
